redis removed, implemented JWT, errors fixed, Stuck at {{ _[''].base_url }}/api/delivery/view/{{ _[''].order_id }}